Update prometheus to 1.x (#728)