@@ -23,17 +23,19 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import com.yelp.nrtsearch.server.luceneserver.GlobalState;
-import io.prometheus.client.Collector.MetricFamilySamples;
-import io.prometheus.client.Collector.MetricFamilySamples.Sample;
+import io.prometheus.metrics.model.snapshots.DataPointSnapshot;
+import io.prometheus.metrics.model.snapshots.GaugeSnapshot;
+import io.prometheus.metrics.model.snapshots.Labels;
+import io.prometheus.metrics.model.snapshots.MetricSnapshots;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Collections;
-import java.util.List;
 import java.util.Random;
 import java.util.Set;
+import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -41,6 +43,11 @@ import org.junit.rules.TemporaryFolder;
 public class DirSizeCollectorTest {
 
   @Rule public final TemporaryFolder folder = new TemporaryFolder();
+
+  @Before
+  public void setUp() throws IOException {
+    DirSizeCollector.indexDirSize.clear();
+  }
 
   private GlobalState getMockState(Set<String> indexNames, File baseDir) {
     GlobalState mockGlobalState = mock(GlobalState.class);
@@ -64,18 +71,18 @@ public class DirSizeCollectorTest {
   public void testNoIndices() {
     DirSizeCollector collector =
         new DirSizeCollector(getMockState(Collections.emptySet(), folder.getRoot()));
-    List<MetricFamilySamples> mfs = collector.collect();
-    assertEquals(1, mfs.size());
-    assertEquals(0, mfs.get(0).samples.size());
+    MetricSnapshots metrics = collector.collect();
+    assertEquals(1, metrics.size());
+    assertEquals(0, metrics.get(0).getDataPoints().size());
   }
 
   @Test
   public void testIndexDirNotExists() {
     DirSizeCollector collector =
         new DirSizeCollector(getMockState(Collections.singleton("test_index"), folder.getRoot()));
-    List<MetricFamilySamples> mfs = collector.collect();
-    assertEquals(1, mfs.size());
-    assertEquals(0, mfs.get(0).samples.size());
+    MetricSnapshots metrics = collector.collect();
+    assertEquals(1, metrics.size());
+    assertEquals(0, metrics.get(0).getDataPoints().size());
   }
 
   @Test
@@ -85,13 +92,15 @@ public class DirSizeCollectorTest {
 
     folder.newFolder("test_index");
 
-    List<MetricFamilySamples> mfs = collector.collect();
-    assertEquals(1, mfs.size());
-    assertEquals(1, mfs.get(0).samples.size());
-    Sample sample = mfs.get(0).samples.get(0);
-    assertEquals(0.0, sample.value, 0.0);
-    assertEquals(Collections.singletonList("index"), sample.labelNames);
-    assertEquals(Collections.singletonList("test_index"), sample.labelValues);
+    MetricSnapshots metrics = collector.collect();
+    assertEquals(1, metrics.size());
+    assertEquals(1, metrics.get(0).getDataPoints().size());
+    GaugeSnapshot.GaugeDataPointSnapshot sample =
+        (GaugeSnapshot.GaugeDataPointSnapshot) metrics.get(0).getDataPoints().getFirst();
+    assertEquals(0.0, sample.getValue(), 0.0);
+    Labels labels = sample.getLabels();
+    assertEquals(1, labels.size());
+    assertEquals("test_index", labels.get("index"));
   }
 
   @Test
@@ -107,16 +116,20 @@ public class DirSizeCollectorTest {
     writeFile(indexDir, "file4", 50);
     writeFile(indexDir, "file5", 400);
 
-    List<MetricFamilySamples> mfs = collector.collect();
-    assertEquals(1, mfs.size());
-    assertEquals(2, mfs.get(0).samples.size());
-    for (Sample sample : mfs.get(0).samples) {
-      if (sample.labelValues.get(0).equals("test_index")) {
-        assertTrue(sample.value >= 300.0);
-      } else if (sample.labelValues.get(0).equals("test_index_2")) {
-        assertTrue(sample.value >= 950.0);
+    MetricSnapshots metrics = collector.collect();
+    assertEquals(1, metrics.size());
+    assertEquals(2, metrics.get(0).getDataPoints().size());
+    for (DataPointSnapshot dataPoint : metrics.get(0).getDataPoints()) {
+      GaugeSnapshot.GaugeDataPointSnapshot sample =
+          (GaugeSnapshot.GaugeDataPointSnapshot) dataPoint;
+      Labels labels = sample.getLabels();
+      assertEquals(1, labels.size());
+      if (labels.get("index").equals("test_index")) {
+        assertTrue(sample.getValue() >= 300.0);
+      } else if (labels.get("index").equals("test_index_2")) {
+        assertTrue(sample.getValue() >= 950.0);
       } else {
-        fail("Unknown index: " + sample.labelValues.get(0));
+        fail("Unknown index: " + labels.get("index"));
       }
     }
   }
@@ -136,16 +149,20 @@ public class DirSizeCollectorTest {
     Files.createSymbolicLink(
         Paths.get(folder.getRoot().toString(), "test_index_2"), Paths.get(indexDir.toString()));
 
-    List<MetricFamilySamples> mfs = collector.collect();
-    assertEquals(1, mfs.size());
-    assertEquals(2, mfs.get(0).samples.size());
-    for (Sample sample : mfs.get(0).samples) {
-      if (sample.labelValues.get(0).equals("test_index")) {
-        assertTrue(sample.value >= 300.0);
-      } else if (sample.labelValues.get(0).equals("test_index_2")) {
-        assertTrue(sample.value >= 950.0);
+    MetricSnapshots metrics = collector.collect();
+    assertEquals(1, metrics.size());
+    assertEquals(2, metrics.get(0).getDataPoints().size());
+    for (DataPointSnapshot dataPoint : metrics.get(0).getDataPoints()) {
+      GaugeSnapshot.GaugeDataPointSnapshot sample =
+          (GaugeSnapshot.GaugeDataPointSnapshot) dataPoint;
+      Labels labels = sample.getLabels();
+      assertEquals(1, labels.size());
+      if (labels.getValue(0).equals("test_index")) {
+        assertTrue(sample.getValue() >= 300.0);
+      } else if (labels.getValue(0).equals("test_index_2")) {
+        assertTrue(sample.getValue() >= 950.0);
       } else {
-        fail("Unknown index: " + sample.labelValues.get(0));
+        fail("Unknown index: " + labels.getValue(0));
       }
     }
   }
